src/app/article/[slug]/article.module.css
.MarkdownBody {
  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji"; */
  font-size: 16px;
  line-height: 1.5;
  word-wrap: break-word;

  --color-border-default: #e6eaed;
  --color-bg-code: #f8f8f8;
  --fgColor-accent: #0969da;
}


.MarkdownBody h1 {
  padding-bottom: .3em;
  font-size: 2em;
}

.MarkdownBody h1,
.MarkdownBody h2,
.MarkdownBody h3,
.MarkdownBody h4,
.MarkdownBody h5,
.MarkdownBody h6 {
  margin-top: 24px;
  margin-bottom: 16px;
  font-weight: var(--base-text-weight-semibold, 600);
  line-height: 1.25;
}

.MarkdownBody h2 {
  padding-bottom: .3em;
  font-size: 1.5em;
  border-bottom: 1px solid var(--borderColor-muted);
}

.MarkdownBody h3 {
  font-size: 1.25em;
}

.MarkdownBody blockquote {
  padding: 0 1em;
  color: var(--fgColor-muted);
  border-left: .25em solid var(--borderColor-default);
}

.MarkdownBody p,
.MarkdownBody blockquote,
.MarkdownBody ul,
.MarkdownBody ol,
.MarkdownBody dl,
.MarkdownBody table,
.MarkdownBody pre,
.MarkdownBody details {
  margin-top: 0;
  margin-bottom: 16px;
}

.MarkdownBody a {
  text-decoration: underline;
  text-underline-offset: .2rem;
}

/********************** table begin ***********************/
.MarkdownBody table {
  display: block;
  width: 100%;
  width: max-content;
  max-width: 100%;
  overflow: auto;
}

.MarkdownBody table tr:nth-child(2n) {
  background-color: var(--bgColor-muted);
}

.MarkdownBody table tr {
  background-color: var(--bgColor-default);
  border-top: 1px solid var(--borderColor-muted);
}

.MarkdownBody table th,
.MarkdownBody table td {
  padding: 6px 13px;
  border: 1px solid var(--borderColor-default);
}

.MarkdownBody table td>:last-child {
  margin-bottom: 0;
}
/********************** table begin ***********************/

/********************** code end ***********************/
.MarkdownBody code, .MarkdownBody tt {
  padding: .2em .4em;
  margin: 0;
  font-size: 85%;
  white-space: break-spaces;
  background-color: var(--bgColor-neutral-muted);
  border: 1px solid var(--color-border-default);
  border-radius: 6px;
  font-family: "Courier", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji"; 
}

.MarkdownBody pre[class*="language-"] code  {
  background-color: transparent !important;
  padding: 0;
  border: none;
  word-wrap: normal;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
}

.MarkdownBody pre[class*="language-"] {
  padding: 10px;
}

.MarkdownBody pre[class*="language-"] {
  border: 1px solid var(--color-border-default);
  border-radius: 5px;
  background: var(--color-bg-code);
}

.MarkdownBody pre[class*="language-"] {
  /* padding: 20px 10px; */
  position: relative;
}

.MarkdownBody pre[class*="language-"]::after {
  opacity: 0.2;
  content: attr(data-language);
  font-size: 1.625rem;
  font-weight: 700;
  position: absolute;
  right: 0.5rem;
  top: 0.2rem;
  user-select: none;
  pointer-events: none;
  color: #64778b;
  font-family: ui-monospace, JetBrains Mono, SFMono-Regular, Menlo, Monaco,
    Consolas, Andale Mono, Liberation Mono, Ubuntu Mono, Courier New, monospace;
}

/********************** code end ***********************/

